2006-06-30  Chris Toshok  <toshok@ximian.com>

	* SCSharp.csproj: make the assembly strings work with xbuild.

	* SCSharp/SCSharp.UI.dll.csproj: same.

	* SCSharp/SCSharp.Smk.dll.csproj: same, and remove SDLPCMStream.cs

	* Properties/AssemblyInfo.cs: remove the duplicate file contents.

	* Properties/Resources.Designer.cs: same.

	* SCSharp/Properties/SCSharp.UI.dll/AssemblyInfo.cs: same.

	* SCSharp/Properties/SCSharp.Smk.dll/AssemblyInfo.cs: same.
	
	* SCSharp/Properties/SCSharp.dll/AssemblyInfo.cs: same.
	
2006-06-28  Tom Allard  <tom.allard@telenet.be>
	* Added a NANT build (nant.build) file which:
		- features easy, cross-platform building on Linux 
		and Windows / Mono or MS CLR.
		- uses the existing .sources files to determine what files
		to build the dlls from.
		- copies all necessary files to the build directory. (Note:
		WIN32 SDL binaries not included, put them (SDL.dll,
		SDL_mixer.dll and SDL_gfx.dll) in a new 'win32' subdir
		of the sdldotnet-bin folder.
		- contains a flag whether or not to override the existing 
		config file in the build directory (default = bin-folder)
		- has two main targets, the default target 'build', which 
		builds the libraries and the executable and the 'clean'
		target wich deletes the build directory (bin)
	To use it:
		1. install nant
		2. run nant (no parameters required)
	
2006-06-21  Jeffrey Stedfast  <fejj@novell.com>

	* SCSharp/SCSharp.Mpq.Smk/BitStream.cs: Removed unused variables.
	(Reset): Instead of resetting the unused variables mCurrent and
	mBitCount variables to 0 (which aren't used anywhere else in the
	code), set mCurrentByte and mCurrentBit to 0, which is probably
	what the author originally intended.

	* SCSharp/SCSharp.Mpq.Smk/Smk.cs: Reindented - some lines seemed
	to use 8-space indents and others seemed to use 4, and even others
	used tab. Made everything use a uniform 4-space indent like the
	other files in this directory.

	* SCSharp/SCSharp.Mpq.Smk/SmkDecoder.cs: Removed unused